# 3171599-f-tomas-canon

./: README_PROYECTO_COMPLETO.md
week-1/: README.md
week-1/starter/: Dockerfile
week-1/starter/src/: main.py
week-2/: README.md
week-2/starter/: docker-compose.yml  pyproject.toml
week-2/starter/src/: __init__.py  main.py
week-2/starter/src/models/: __init__.py  crop.py
week-2/starter/src/routers/: __init__.py  crops.py
week-2/starter/src/schemas/: __init__.py  crop.py
week-2/starter/src/services/: crop_service.py
week-3/: README.md
week-3/starter/: docker-compose.yml  pyproject.toml
week-3/starter/src/: __init__.py  main.py
week-3/starter/src/models/: __init__.py  crop.py
week-3/starter/src/routers/: __init__.py  catalog.py
week-3/starter/src/schemas/: __init__.py  crop.py
week-3/starter/src/services/: __init__.py  catalog_service.py
week-4/: README.md
week-4/starter/: Dockerfile  docker-compose.yml  pyproject.toml
week-4/starter/src/: __init__.py  main.py
week-4/starter/src/exceptions/: __init__.py  agrotech_exceptions.py
week-4/starter/src/models/: __init__.py
week-4/starter/src/routers/: __init__.py
week-4/starter/src/schemas/: __init__.py
week-4/starter/src/services/: __init__.py
