# ============================================
# PYPROJECT.TOML - Proyecto API CRUD Cultivos
# ============================================

[project]
name = "agrotech-crud-api"
version = "2.0.0"
description = "API CRUD Completa para Gestión de Cultivos - AgroTech"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "fastapi[standard]>=0.128.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
]

[tool.setuptools]
packages = ["src"]