# ============================================
# PYPROJECT.TOML - API AgroTech Operaciones
# ============================================

[project]
name = "agrotech-operations-api"
version = "4.0.0"
description = "API de Operaciones Agrícolas con Responses y Manejo de Errores"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "fastapi[standard]>=0.128.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
]

[tool.setuptools]
packages = ["src"]